# vote-extractor

./: .flake8  .gitignore  README.md  main.py  out.csv  poetry.toml  pyproject.toml  recommendations.json
vote_extractor/: __init__.py  __main__.py  args.py  extraction.py
