[tool.poetry]
name = "vote-extractor"
version = "0.1.3"
description = "Simple python cli to extract voting results from PDfs published by the swiss parliament."
authors = ["olivier <olibitter@gmail.com>"]
readme = "README.md"
packages = [{include = "vote_extractor"}]

[tool.poetry.dependencies]
python = "^3.10"
camelot-py = "^0.11.0"
opencv-python = "^4.7.0.72"
ghostscript = "^0.7"
requests = "^2.31.0"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
extract-votes = "vote_extractor.__main__:main"
